# LongReadMapper

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Notes.txt  README.md  accaln.c  accaln.h  alnmain.c  alnmain.h  asindex.c  mutils.c  mutils.h
chaining/: CMakeLists.txt  chain.cc  chain.h
edlib/: CMakeLists.txt  ed_test.c
fmidx/: fmidx.c  fmidx.h
histo/: .clang-format  histo.c  histo.h
lchash/: lchash.c  lchash.h
logger/: CMakeLists.txt  logger.c  logger.h  logger_use.c
psascan/: CMakeLists.txt  sa_use.cc  sa_use.h  sa_use_test.c
psascan/libdivsufsort/: CMakeLists.txt  VERSION.cmake
psascan/libdivsufsort/include/: CMakeLists.txt
psascan/libdivsufsort/lib/: CMakeLists.txt
psascan/libdivsufsort/pkgconfig/: CMakeLists.txt
psascan/src/psascan_src/: psascan.cc  psascan.h  rank.h  utils.h
psascan/src/psascan_src/inmem_psascan_src/: divsufsort_template.h  rank.h
scripts/: dna_txt_gen.py  gen-sbatch-scripts.py  rev-comp.py  subit_all_jobs.sh
ssw/: CMakeLists.txt  ssw_test.c  ssw_use.c  ssw_use.h
test/: CMakeLists.txt  play.c  test-examples.cc  test-fmidx.cc  test-lchash.cc  test-main.cc  test-ui40read.cc
